# layered-settings

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml  runtest.py  setup.py
layered_settings/: __init__.py  layered_settings.py
layered_settings/loaders/: __init__.py  base_loader.py  callable_loader.py  config_parser_loader.py  dict_loader.py  env_loader.py  secrets_manager_loader.py  ssm_loader.py
tests/: tests.py
tests/inifiles/: setting-defaults.ini  setting-overrides.ini
