[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layered-settings"
version = "1.1.1"
description = "Flexible, simple, extensible settings loader from environment, AWS SSM, AWS Secrets Manager, configparser .ini, and more."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Scott Stafford", email = "scott.stafford+layered@gmail.com" },
]
keywords = ["settings", "configuration", "ssm", "secrets-manager", "aws", "configparser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
ssm = ["boto3"]
aws = ["boto3"]

[project.urls]
Homepage = "https://github.com/mathandpencil/layered-settings"
Changelog = "https://github.com/mathandpencil/layered-settings/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["layered_settings"]

[tool.hatch.build.targets.sdist]
include = [
    "layered_settings",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.env
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
skip = '.venv,.env,.git,migrations,dist,build'
